2010-12-15  Colin Leroy  <colin@colino.net>

	* src/Makefile.am: Fix libpng building

2010-12-14  Werner Koch  <wk@g10code.com>

	* patches/dirmngr-1.1.0/01-mmap.patch: New.
	* Makefile.am (EXTRA_DIST): Add patch.

2010-11-21  Colin Leroy  <colin@colino.net>

	* packages/packages.current: Update Claws Mail and plugins to 3.7.7.

2010-11-21  Colin Leroy  <colin@colino.net>

	* packages/packages.current: Fix libtasn1 download link.

2010-11-04  Emanuel Schuetze <emanuel@intevation.de>

	* packages/packages.current: Update kleopatra.

2010-11-02  Emanuel Schuetze <emanuel@intevation.de>

	* src/inst-gnupg2.nsi: Install trustlist.txt and trustlist.txt.example
	  into $APPDATA\GNU\etc\gnupg.

	* src/uninst-gpg4win.nsi, src/installer.nsi, src/inst-gpg4win.nsi,
	  src/inst-sections.nsi: Install HOWTO-SMIME.de.txt and HOWTO-SMIME.en.txt.

	* packages/packages.current: Update kleopatra and kdelibs.

2010-09-24  Werner Koch  <wk@g10code.com>

	* patches/gnupg2-2.0.16/06-reread-agent.patch: New.

2010-09-23  Werner Koch  <wk@g10code.com>

	* packages/packages.current: Update bzip2.

2010-09-21  Emanuel Schuetze <emanuel@intevation.de>

	* configure.ac: Add COMPENDIUMINPROGRESS_EN and _DE.
	Switch to 2.1.0-beta2-svn version number.	

	* NEWS: Prepare 2.1.0-beta2.

2010-09-16  Werner Koch  <wk@g10code.com>

	* patches/gnupg2-2.0.16/05-err-codes.patch: New.

2010-09-14  Emanuel Schuetze <emanuel@intevation.de>

	* src/inst-gpg4win.nsi: Install README.en.txt for ar, es, fr, ru, pt 
	README files.

2010-09-13  Emanuel Schuetze <emanuel@intevation.de>

	* src/gpg4win.mk.in: Add !BUILD_ISODATE! for README template replacement.

2010-09-03  Emanuel Schuetze <emanuel@intevation.de>

	* configure.ac: Changed compendium EN date format.

2010-09-02  Emanuel Schuetze <emanuel@intevation.de>

	* src/uninst-compendium.nsi: Fix to remove compendium-html dirs.

	* NEWS: Update release date.

2010-09-01  Emanuel Schuetze <emanuel@intevation.de>
