@@ -56,6 +56,7 @@ installed:
  sharutils (uudecode for claws icon patch)
  gettext (msgfmt, dcgettext, gmsgfmt, xgettext for glib)
  libglib2.0-dev (glib-genmarshal for glib)
+ docbook-utils, ghostscript (claws-mail manual)
 
 
 Building the Webpages
