@@ -1,3 +1,8 @@
+2010-12-15  Marcus Brinkmann  <marcus@g10code.com>
+
+	* src/Makefile.am (gpg4win_pkg_claws_mail_post_install): New macro.
+	* README: Add docbook-utils and ghostscript as dependencies.
+
 2010-12-15  Colin Leroy  <colin@colino.net>
 
 	* src/Makefile.am: Fix libpng building
